corrected errors like horizontal scrolling and too close clickable elements

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,8 @@
 html, body{
 	margin: 0px;
 	height: 100%;
-	width: 100%;
+	max-width: 100%;
+    overflow-x: hidden;
 	cursor: none;
 }
 
@@ -11,8 +12,8 @@ header{
 	height: 7.2vw;
 	width: 100%;
 	padding: 0.64vw;
-	top: 0px;
-	left: 0px;
+	top: 0;
+	left: 0;
 	display: inline-block;
 }
 
@@ -20,11 +21,11 @@ header{
 	header{
 		overflow: hidden;
 		background-color: #f44336;
-		height: 27vw;
+		height: 28vw;
 		width: 100%;
 		padding: 0.64vw;
-		top: 0px;
-		left: 0px;
+		top: 0;
+		left: 0;
 		display: inline-block;
 	}
 }
@@ -110,17 +111,18 @@ a:link, a:visited {
 }
 
 .header-nav a{
-	width: 20%;
+	width: 19.8%;
 	margin: 0vw;
-	left: 0px;
+	left: 0.1%;
+	right: 0.1%;
 	float: left;
 }
 
 @media only screen and (max-width: 760px){
 	.header-nav a{
 	width: 100%;
-	margin: 0vw;
-	left: 0px;
+	margin: 0.2vw;
+	left: 0;
 	float: left;
 	}
 }
